# lab2_factories_sg

./: LICENSE  README.md  pyproject.toml  requirements.txt  test_request.json
app/: dataclasses.py  main.py
app/api/: routes.py
app/core/: config.py
app/features/: base.py  factory.py  generators.py
app/models/: new_similarity_method.py  similarity_model.py
app/services/: email_topic_inference.py  new_email_store.py  new_topic_store.py
data/: emails.json  topic_keywords.json
